--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,6 @@ body {
 	padding: 0px;
 }
 
-hr 
-{
-	display: block;
-	margin-top: 0.5em;
-	margin-bottom: 0.5em;
-	margin-left: auto;
-	margin-right: auto;
-	border-style: inset;
-	border-width: 1px;
-}
 
 h1,
 h2,
@@ -75,6 +65,11 @@ h5,
 h6 {
 	margin: 0px;
 	padding: 0px;
+}
+
+.kocsi{
+	height: 55px;
+	margin-top: 5px;
 }
 
 ul,
@@ -184,7 +179,7 @@ header .navbar-default .navbar-header {
 
 .web-sh.navbar-form input::-moz-placeholder {
 	/* Firefox 19+ */
-	color: #474747;
+	color #474747;
 	opacity: 1;
 }
 
@@ -283,7 +278,12 @@ header .navbar-default .navbar-header {
 	padding: 10px 20px;
 }
 
-
+.top-nav ul li a {
+	color: #fff;
+	font-family: ;
+	font-size: 14px;
+	font-weight: 400;
+}
 
 #sidebar.active {
 	right: 100%;
