--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ header .navbar {
 }
 
 #header.top-head {
-	background: #fff;
+	background:#90a7c2
 }
 
 header .navbar-default {
@@ -629,7 +629,7 @@ header .navbar-default .navbar-header {
 	background: #051d36;
 	text-align: center;
 	padding-bottom: 30px;
-	min-height: 280px;
+	height: 480px;
 	margin-bottom: 30px;
 	position: relative;
 	border-bottom: solid #007dea 3px;
@@ -738,6 +738,29 @@ header .navbar-default .navbar-header {
 	border-radius: 15px;
 }
 
+.fiz
+{
+	background: #183350;
+	padding: 20px 0px;
+	width: 800px;
+	left: 100%;
+	height: 500px;
+	position: absolute;
+	transition: 0.5s;
+	z-index: 10;
+	align-items: center;
+	top: 30%;
+	color: white;
+	border-radius: 15px;
+}
+
+.asd .fiz {
+	top: 30%;
+	width: 800px;
+	height: 500px;
+	left: 30%;
+}
+
 .asd .szallitas {
 	top: 30%;
 	width: 800px;
@@ -746,8 +769,17 @@ header .navbar-default .navbar-header {
 }
 
 .bezar {
+	position: absolute;
 	cursor: pointer;
-	margin-top: 33.5%;
+	margin-top: 12%;
+	float: right;
+	margin-right: 35%;
+}
+
+.fizetes
+{
+	cursor: pointer;
+	margin-top: 12%;
 	float: right;
 	margin-right: 35%;
 }
