--- a/css/style.css
+++ b/css/style.css
@@ -785,10 +785,11 @@ header .navbar-default .navbar-header {
 }
 
 .fizetes {
-	cursor: pointer;
+	
 	margin-top: 12%;
 	float: right;
 	margin-right: 35%;
+	color: gray;
 }
 
 #db {
