--- a/css/style.css
+++ b/css/style.css
@@ -726,9 +726,9 @@ header .navbar-default .navbar-header {
 	/* background: #f4f9fd; */
 	background: #183350;
 	padding: 20px 0px;
-	width: 800px;
+	width: 1000px;
 	left: 100%;
-	height: 500px;
+	height: 600px;
 	position: absolute;
 	transition: 0.5s;
 	z-index: 10;
@@ -738,12 +738,21 @@ header .navbar-default .navbar-header {
 	border-radius: 15px;
 }
 
+.marg
+{
+	margin-top: 13%;
+	float: left;
+	margin-right: 25%;
+}
+
 .fiz {
+	
+	margin-top: -30px;
 	background: #183350;
 	padding: 20px 0px;
-	width: 800px;
+	width: 1000px;
 	left: 100%;
-	height: 500px;
+	height: 600px;
 	position: absolute;
 	transition: 0.5s;
 	z-index: 10;
@@ -751,12 +760,18 @@ header .navbar-default .navbar-header {
 	top: 30%;
 	color: white;
 	border-radius: 15px;
+	margin-bottom: 50px;
+}
+
+#check
+{
+	color: greenyellow;
 }
 
 .asd2 .fiz {
 	top: 30%;
-	width: 800px;
-	height: 500px;
+	width: 1000px;
+	height: 600px;
 	left: 30%;
 }
 
@@ -775,10 +790,15 @@ header .navbar-default .navbar-header {
 	margin-right: 35%;
 }
 
+input
+{
+	color: black;
+}
+
 .bezar2 {
 	position: absolute;
 	cursor: pointer;
-	margin-top: 12%;
+	margin-top: 10%;
 	float: right;
 	margin-right: 35%;
 
@@ -2270,181 +2290,6 @@ html .ui-button.ui-state-disabled:active {
 	margin-bottom: 20px;
 }
 
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked {
-	position: absolute;
-	left: -9999px;
-	opacity: 0;
-}
-
-[type="checkbox"].filled-in:checked.chk-col-blue+label:after {
-	border: 1px solid #dfdfdf;
-	background-color: transparent;
-}
-
-[type="checkbox"]:checked.chk-col-blue+label:before {
-	border-right: 2px solid #df4c18;
-	border-bottom: 2px solid #df4c18;
-}
-
-[type="checkbox"].filled-in:checked+label:before {
-	border-right: 2px solid #3bb076 !important;
-	border-bottom: 2px solid #3bb076 !important;
-}
-
-[type="checkbox"]+label {
-	padding-left: 26px;
-	line-height: 28px;
-	font-size: 13px;
-	font-weight: normal;
-	position: relative;
-	font-weight: 500;
-	margin: 5px 10px;
-}
-
-[type="checkbox"].filled-in:not(:checked)+label:after {
-	height: 18px;
-	width: 18px;
-	background-color: transparent;
-	border: 1px solid #999999;
-	top: 0px;
-	z-index: 0;
-}
-
-[type="checkbox"].filled-in:checked+label:after {
-	top: 0;
-	width: 18px;
-	height: 18px;
-	border: 2px solid #f44336;
-	background-color: #f44336;
-	z-index: 0;
-}
-
-[type="checkbox"].filled-in:checked+label:before {
-	top: 0;
-	left: 0px;
-	width: 8px;
-	height: 12px;
-}
-
-[type="checkbox"]:checked+label:before {
-	top: -4px;
-	left: -2px;
-	width: 11px;
-	height: 19px;
-}
-
-[type="checkbox"]:indeterminate+label:before {
-	top: -11px;
-	left: -12px;
-	width: 10px;
-	height: 22px;
-	border-top: none;
-	border-left: none;
-	border-right: 1px solid #f44336;
-	border-bottom: none;
-	-webkit-transform: rotate(90deg);
-	transform: rotate(90deg);
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-transform-origin: 100% 100%;
-	transform-origin: 100% 100%;
-}
-
-[type="checkbox"]:indeterminate:disabled+label:before {
-	border-right: 2px solid rgba(0, 0, 0, 0.26);
-	background-color: transparent;
-}
-
-[type="checkbox"].filled-in+label:after {
-	border-radius: 2px;
-}
-
-[type="checkbox"].filled-in+label:before,
-[type="checkbox"].filled-in+label:after {
-	content: '';
-	left: 0;
-	position: absolute;
-	/* .1s delay is for check animation */
-	transition: border .25s, background-color .25s, width .20s .1s, height .20s .1s, top .20s .1s, left .20s .1s;
-	z-index: 1;
-}
-
-[type="checkbox"].filled-in:not(:checked)+label:before {
-	width: 0;
-	height: 0;
-	border: 3px solid transparent;
-	left: 6px;
-	top: 10px;
-	-webkit-transform: rotateZ(37deg);
-	transform: rotateZ(37deg);
-	-webkit-transform-origin: 20% 40%;
-	transform-origin: 100% 100%;
-}
-
-[type="checkbox"].filled-in:not(:checked)+label:after {
-	height: 15px;
-	width: 15px;
-	background-color: transparent;
-	border: 1px solid #dfdfdf;
-	top: 5px;
-	z-index: 0;
-}
-
-[type="checkbox"].filled-in:checked+label:before {
-	top: 5px;
-	left: 1px;
-	width: 8px;
-	height: 13px;
-	border-top: 2px solid transparent;
-	border-left: 2px solid transparent;
-	border-right: 2px solid #3bb076;
-	border-bottom: 2px solid #3bb076;
-	-webkit-transform: rotateZ(37deg);
-	transform: rotateZ(37deg);
-	-webkit-transform-origin: 100% 100%;
-	transform-origin: 100% 100%;
-}
-
-[type="checkbox"].filled-in:checked+label:after {
-	top: 5px;
-	width: 15px;
-	height: 15px;
-	border: 1px solid #f44336;
-	background-color: #f44336;
-	z-index: 0;
-}
-
-[type="checkbox"].filled-in.tabbed:focus+label:after {
-	border-radius: 2px;
-	border-color: #5a5a5a;
-	background-color: rgba(0, 0, 0, 0.1);
-}
-
-[type="checkbox"].filled-in.tabbed:checked:focus+label:after {
-	border-radius: 2px;
-	background-color: #f44336;
-	border-color: #f44336;
-}
-
-[type="checkbox"].filled-in:disabled:not(:checked)+label:before {
-	background-color: transparent;
-	border: 2px solid transparent;
-}
-
-[type="checkbox"].filled-in:disabled:not(:checked)+label:after {
-	border-color: transparent;
-	background-color: #BDBDBD;
-}
-
-[type="checkbox"].filled-in:disabled:checked+label:before {
-	background-color: transparent;
-}
-
-[type="checkbox"].filled-in:disabled:checked+label:after {
-	background-color: #BDBDBD;
-	border-color: #BDBDBD;
-}
 
 .left-list-f {}
 
